--- a/1.数据结构和算法.ipynb
+++ b/1.数据结构和算法.ipynb
@@ -471,6 +471,245 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "读取文件`somefile.txt`，将含有单词`Python`的行输出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "I like Python\n",
+      "--------------------\n",
+      "hello world\n",
+      "I like Python\n",
+      "Life is short, I use Python\n",
+      "--------------------\n",
+      "I like Python\n",
+      "Life is short, I use Python\n",
+      "However, I'm learning cpp now\n",
+      "I love China\n",
+      "one piece\n",
+      "Python is easy to learn\n",
+      "--------------------\n",
+      "Life is short, I use Python\n",
+      "However, I'm learning cpp now\n",
+      "I love China\n",
+      "one piece\n",
+      "Python is easy to learn\n",
+      "I like Python\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def search(lines, pattern, history=5):\n",
+    "    previous_lines = deque(maxlen=history)\n",
+    "    for line in lines:\n",
+    "        if pattern in line:\n",
+    "            yield line, previous_lines  # 当检测到时，输出当前行line，以及包含前几行的previous_lines\n",
+    "        previous_lines.append(line)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with open('src/somefile.txt') as f:\n",
+    "        for line, prelines in search(f, 'Python', 5):\n",
+    "            for pline in prelines:\n",
+    "                print(pline, end='')    # 输出记录的前几行，最多保存5行\n",
+    "            print(line, end='') # 输出当前行\n",
+    "            print('-'*20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4 找出最大或最小的N个元素\n",
+    "### 1.4.1 解决方案\n",
+    "`heapq`模块中有两个函数——`nlargest()`和`nsmallest()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42, 37, 23]\n",
+      "[-4, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "nums = [1, 8, 2, 23, 7, -4, 18, 23, 42, 37, 2]\n",
+    "print(heapq.nlargest(3, nums))  # 输出列表nums中最大的3个元素 [42, 37, 23]\n",
+    "print(heapq.nsmallest(3, nums)) # 输出列表nums中最小的3个元素 [-4, 1, 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这两个函数都可以接受一个参数key，运行工作在更加复杂的数据结构之上，自定义排序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'YHOO', 'shares': 45, 'price': 16.35},\n",
+       " {'name': 'FB', 'shares': 200, 'price': 21.09},\n",
+       " {'name': 'HPQ', 'shares': 35, 'price': 31.75}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portfolio = [\n",
+    "    {'name':'IBM', 'shares':100, 'price':91.1},\n",
+    "    {'name':'AAPL', 'shares':50, 'price':543.22},\n",
+    "    {'name':'FB', 'shares':200, 'price':21.09},\n",
+    "    {'name':'HPQ', 'shares':35, 'price':31.75},\n",
+    "    {'name':'YHOO', 'shares':45, 'price':16.35},\n",
+    "    {'name':'ACME', 'shares':75, 'price':115.65}\n",
+    "]\n",
+    "\n",
+    "cheap = heapq.nsmallest(3, portfolio, key=lambda s:s['price'])  # 按'price'排序最小的3个元素\n",
+    "cheap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4.2 讨论\n",
+    "如果正在寻找最大或最小的N个元素，且同集合中元素的总数目相比，N很小，以下方法可以提供更好的性能。这些函数首先在底层将数据转化成列表，且元素会以堆的顺序排列。\n",
+    "\n",
+    "堆最重要的特性就是heap[0]总是最小那个的元素。接下来的元素可依次通过`heapq.heappop()`方法找到，该方法会将第一个元素(最小的)弹出，然后以第二小的元素取而代之(复杂度是O(logN)，N代表堆的大小)。要找到第3小的元素，可以这样做："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-4, 2, 1, 23, 7, 2, 18, 23, 42, 37, 8]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1, 8, 2, 23, 7, -4, 18, 23, 42, 37, 2]\n",
+    "import heapq\n",
+    "heap = list(nums)\n",
+    "heapq.heapify(heap) # heapq.heapify()将列表(list)转换为堆(heap)\n",
+    "heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapq.heappop(heap) # 最小的元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapq.heappop(heap) # 第2小的元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapq.heappop(heap) # 第3小的元素"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 当所要找的元素数量相对较小时，函数`nlargest()`和`nsmallest()`才是最适用的。\n",
+    "- 如果只是简单地找到最小或最大地元素(N=1)，用`min()`和`max()`会更加快。\n",
+    "- 如果N和集合本身地大小差不多大，通常更快地方法是先对集合排序，然后做切片操作。(例如，使用sorted(items)[:N])\n",
+    "- 值得注意的是：`nlargest()`和`nsmallest()`的实际实现会根据使用它们的方式而有所不同，可能会相应做出一些优化措施(比如，当N大小同输入大小很接近时，就会采用排序的方法)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.5 实现优先级队列\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
