--- a/1.数据结构和算法(1).ipynb
+++ b/1.数据结构和算法(1).ipynb
@@ -706,15 +706,511 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5 实现优先级队列\n"
+    "## 1.5 实现优先级队列\n",
+    "### 1.5.1 问题\n",
+    "要实现一个队列，能够以给定的优先级来对元素排序，且每次pop操作时都会返回优先级最高的那个元素。\n",
+    "### 1.5.2 解决方案\n",
+    "下面的类利用`heapq`模块实现了一个简单的优先级队列："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import heapq\n",
+    "class PriorityQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._queue = []\n",
+    "        self._index = 0\n",
+    "\n",
+    "    def push(self, item, priority):\n",
+    "        heapq.heappush(self._queue, (-priority, self._index, item)) # 向列表_queue插入元素\n",
+    "        self._index += 1\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return heapq.heappop(self._queue)[-1]   # 将元素从列表_queue删除，[-1]表示元组中的item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Item:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def __repr__(self):\n",
+    "        return 'Item({!r})'.format(self.name)\n",
+    "\n",
+    "q = PriorityQueue()\n",
+    "q.push(Item('foo'), 1)\n",
+    "q.push(Item('bar'), 5)\n",
+    "q.push(Item('spam'), 4)\n",
+    "q.push(Item('grok'), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item('bar')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item('spam')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item('foo')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item('gork')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.pop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "第一次执行`pop()`操作时返回的元素具有最高的优先级。当两个元素拥有相同的优先级时，返回的顺序同它们插入到队列时的顺序相同。\n",
+    "### 1.5.3 讨论\n",
+    "在这段代码中，队列以元组(-priority, index, item)的形式组成。\n",
+    "- 把priority取负值是为了让队列能够按元素的优先级从高到低的顺序排序。一般情况下，堆是按从小打到的顺序排序的。\n",
+    "- 变量index的作用是为了将具有相同优先级的元素以适当的顺序排列。通过一个不断递增的索引，元素将以它们入队列时的顺序来排列。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.6 在字典中将键映射到多个值上\n",
+    "### 1.6.1 问题\n",
+    "想要一个能将键(key)映射到多个值的字典(即所谓的一键多值字典[multidict])。\n",
+    "### 1.6.2 解决方案\n",
+    "字典是一个关联容器，每个键都映射到一个单独的值上。如果想让键映射到多个值，需要将这多个值保存到另一个容器如列表或集合中。\n",
+    "\n",
+    "要使用列表还是集合完全取决于应用的意图。如果希望保留元素插入的顺序，就用列表。如果希望消除重复元素(且不在意它们的顺序)，就用集合。\n",
+    "\n",
+    "为了方便地创建这样地字典，可以利用`collections`模块中的`defaultdict`类。它的一个特点就是会自动初始化第一个值，这样只需关注添加元素即可。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {'a': [1, 2], 'b': [4]})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "d =  defaultdict(list)  # 自动创建字典表项以待稍后访问\n",
+    "d['a'].append(1)\n",
+    "d['a'].append(2)\n",
+    "d['b'].append(4)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(set, {'a': {1, 2}, 'b': {4}})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = defaultdict(set)\n",
+    "d['a'].add(1)\n",
+    "d['a'].add(2)\n",
+    "d['b'].add(4)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': [1, 2], 'b': [4]}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 子啊普通的字典上调用`setdefault()`方法\n",
+    "d = {}  # A regular dictionary\n",
+    "d.setdefault('a', []).append(1)\n",
+    "d.setdefault('a', []).append(2)\n",
+    "d.setdefault('b', []).append(4)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6.3 讨论\n",
+    "原则上，构建一个一键多值字典是很容易的。但是如果试着自己**对第一个值做初始化操作**，会变得很杂乱。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs = {'a':1, 'b':2, 'c':3}\n",
+    "\n",
+    "d = {}\n",
+    "for key, value in pairs.items():\n",
+    "    if key not in d:\n",
+    "        d[key] = []     # 普通列表需要对没有的键进行初始化\n",
+    "    d[key].append(value)\n",
+    "\n",
+    "d = defaultdict(list)\n",
+    "for key, value in pairs.items():\n",
+    "    d[key].append(value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.7 让字典保持有序\n",
+    "### 1.7.1 问题\n",
+    "创建一个字典，同时当对字典做迭代或序列化操作时，也能控制其中元素的顺序。\n",
+    "### 1.7.2 解决方案\n",
+    "要控制字典中的元素的顺序，可以使用`collections`模块中的`OrderedDict`类。当对字典做迭代时，它会严格按照元素初始添加的顺序进行。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo 1\n",
+      "bar 2\n",
+      "spam 3\n",
+      "grok 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "d = OrderedDict()\n",
+    "d['foo'] = 1\n",
+    "d['bar'] = 2\n",
+    "d['spam'] = 3\n",
+    "d['grok'] = 4\n",
+    "\n",
+    "for key in d:\n",
+    "    print(key, d[key])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "当想构建一个映射结构以便稍后对其做序列化或编码成另一种格式时，OrderedDict就显得特别有用。例如，如果想在进行JSON编码时精确控制各字段的顺序，那么只要首先在OrderedDict中构架数据就可以了。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"foo\": 1, \"bar\": 2, \"spam\": 3, \"grok\": 4}'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "json.dumps(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7.3 讨论\n",
+    "OrderedDict内部维护了一个双向链表，他会根据元素加入的顺序来排列键的位置。第一个新加入的元素被放置在链表的末尾。接下来对已存在的键做重新赋值不会改变键的书匈奴。\n",
+    "\n",
+    "注意到OrderedDict的大小是普通字典的2倍多，这是由于它额外创建的链表所致。因此，如果打算构建一个涉及大量OederedDict实例的数据结构，需要认真对应用做需求分析。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.8 与字典有关的计算问题\n",
+    "### 1.8.1 问题\n",
+    "在字典上堆数据执行各式各样的计算(比如求最小值、最大值、排序等)\n",
+    "## 1.8.2 解决方案\n",
+    "有如下一个字典在股票名称和对应的价格间做了映射，为了能对字典内容做些有用的计算，通常会利用`zip()`将字典的键和值反转过来。\n",
+    "\n",
+    "例如，下面的代码会告诉我们如何找出价格最低和最高的股票。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10.75, 'FB')\n",
+      "(612.78, 'AAPL')\n"
+     ]
+    }
+   ],
+   "source": [
+    "prices = {\n",
+    "    'ACME': 45.23,\n",
+    "    'AAPL': 612.78,\n",
+    "    'IBM': 205.55,\n",
+    "    'HPQ': 37.20,\n",
+    "    'FB': 10.75\n",
+    "}\n",
+    "\n",
+    "min_price = min(zip(prices.values(), prices.keys()))\n",
+    "print(min_price)\n",
+    "max_price = max(zip(prices.values(), prices.keys()))\n",
+    "print(max_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10.75, 'FB'), (37.2, 'HPQ'), (45.23, 'ACME'), (205.55, 'IBM'), (612.78, 'AAPL')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 要堆数据排序只要使用zip()再配合sorted()就可以\n",
+    "prices_sorted = sorted(zip(prices.values(), prices.keys()))\n",
+    "print(prices_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10.75, 'FB')\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-e8107ce5fb42>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprices_sorted\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprices_sorted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprices_sorted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: max() arg is an empty sequence"
+     ]
+    }
+   ],
+   "source": [
+    "# 注意zip()创建了一个迭代器，它的内容只能被消费一次。下面代码就是错误的：\n",
+    "prices_sorted = zip(prices.values(), prices.keys())\n",
+    "print(min(prices_sorted))\n",
+    "print(max(prices_sorted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.8.3 讨论\n",
+    "如果尝试在字典上执行常见的数据操作，将会发现它们只会处理键，而不是值。\n",
+    "```python\n",
+    "min(prices) # returns 'AAPL' 返回根据键首字母排序结果\n",
+    "max(prices) # returns 'IBM'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FB\n",
+      "AAPL\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 提供一个key参数传递给min()和max()，就能得到最大值和最小值对应的键\n",
+    "print(min(prices, key=lambda k:prices[k])) # 'FB'\n",
+    "print(max(prices, key=lambda k:prices[k])) # 'AAPL'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 如果要得到最小值得话，还需要额外执行一次查找\n",
+    "min_value = prices[min(prices, key=lambda k:prices[k])]\n",
+    "print(min_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "利用`zip()`解决方案是通过将字典得键-值对“反转”为值-键对序列。\n",
+    "\n",
+    "当在这样得元组上执行比较操作时，值会先进行比较，然后才是键。如果碰到有多个条目拥有相同得value值，那么此时key将用来作为判断结果的依据。\n",
+    "\n",
+    "例如，在计算`min()`和`max()`时，如果碰巧value的值相同，则将返回拥有最小或最大key值的那个条目"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(45.23, 'AAA')\n",
+      "(45.23, 'ZZZ')\n"
+     ]
+    }
+   ],
+   "source": [
+    "prices = {'AAA':45.23, 'ZZZ':45.23}\n",
+    "print(min(zip(prices.values(), prices.keys())))\n",
+    "print(max(zip(prices.values(), prices.keys())))"
+   ]
   }
  ],
  "metadata": {
